--- a/style.css
+++ b/style.css
@@ -1,18 +1,30 @@
-body{
-    background-color: #e3e9ff;;
+body {
+    background-color: #e3e9ff;
+    ;
 }
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-.container{
+
+.main-head {
+    color: #6e7189;
+    font-family: Roboto, sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 23px;
+}
+
+.container {
     margin: 0 auto !important;
     max-width: 500px;
     text-align: center;
     margin-top: 20vh !important;
 }
-.head{
+
+.head {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -20,40 +32,115 @@ body{
     color: white;
     padding: 20px;
     border-radius: 5px;
+    margin-bottom: 15px !important;
 }
-.fa{
+
+.fa {
     font-size: 23px;
 }
-.fa-1{
-    font-size: 22px;
+
+.fa-1 {
+    font-size: 21px;
+    color: forestgreen;
+    cursor: pointer;
 }
-.fa-2{
-    font-size: 22px;
+
+.fa-2 {
+    font-size: 21px;
+    color: red;
+    cursor: pointer;
 }
-.main{
+
+.main {
     margin-top: 15px !important;
     background-color: white;
-    padding: 20px;
+    /* padding: 0 20px 20px 20px; */
     border-radius: 5px;
 }
-.list{
+
+.list {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 20px 20px 20px 20px;
 }
-.icons{
+
+.icons {
     display: flex;
     justify-content: space-between;
     align-items: center;
     column-gap: 15px;
 }
-@media(max-width:520px){
-    .container{
+
+.search-box {
+    width: fit-content;
+    height: fit-content;
+    position: relative;
+    margin: 0 auto !important;
+}
+
+.input-search {
+    height: 50px;
+    width: 50px;
+    border-style: none;
+    padding: 10px;
+    font-size: 18px;
+    letter-spacing: 2px;
+    outline: none;
+    border-radius: 25px;
+    transition: all .5s ease-in-out;
+    background-color: #af7eeb;
+    padding-right: 40px;
+    color: #fff;
+}
+
+.input-search::placeholder {
+    color: rgba(255, 255, 255, .9);
+    font-size: 18px;
+    letter-spacing: 2px;
+    font-weight: 100;
+}
+
+.btn-search {
+    width: 50px;
+    height: 50px;
+    border-style: none;
+    font-size: 20px;
+    font-weight: bold;
+    outline: none;
+    cursor: pointer;
+    border-radius: 50%;
+    position: absolute;
+    right: 0px;
+    color: #ffffff;
+    background-color: transparent;
+    pointer-events: painted;
+}
+
+.btn-search:focus~.input-search {
+    width: 300px;
+    border-radius: 0px;
+    background-color: #af7eeb;
+    border-bottom: 1px solid rgba(255, 255, 255, .5);
+    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+}
+
+.input-search:focus {
+    width: 300px;
+    border-radius: 0px;
+    background-color: #af7eeb;
+    border-bottom: 1px solid rgba(255, 255, 255, .5);
+    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+}
+
+@media(max-width:520px) {
+    .container {
         padding: 0 25px;
     }
 }
-@media(max-width:400px){
-    .container{
+
+@media(max-width:400px) {
+    .container {
         padding: 0 20px;
     }
 }
