--- a/style.css
+++ b/style.css
@@ -9,6 +9,14 @@ body {
     box-sizing: border-box;
 }
 
+::-webkit-scrollbar{
+    width: 10px;
+    background-color: #e3e9ff;
+}
+::-webkit-scrollbar-thumb{
+    background-color: #af7eeb;
+    border-radius: 5px;
+}
 .main-head {
     color: #6e7189;
     font-family: Roboto, sans-serif;
