--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@ body {
     border-radius: 5px;
 }
 
+.abc{
+    font-family: "Roboto", sans-serif;font-weight: 500;font-style: normal;font-size: 25px;
+}
+
 .list {
     display: flex;
     justify-content: space-between;
@@ -80,74 +84,72 @@ body {
     column-gap: 15px;
 }
 
-.search-box {
-    width: fit-content;
-    height: fit-content;
+.search {
+    width: 100%;
+    display: inline-block;
     position: relative;
-    margin: 0 auto !important;
-}
-
-.input-search {
-    height: 50px;
-    width: 50px;
-    border-style: none;
-    padding: 10px;
-    font-size: 18px;
-    letter-spacing: 2px;
-    outline: none;
-    border-radius: 25px;
-    transition: all .5s ease-in-out;
+  }
+  .search input[type="text"] {
+    font-size: 16px;
+    width: 100%;
+    padding: 15px;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  :focus-visible{
+    outline: 0px !important;
+  }
+  
+  .search button[type="submit"] {
+    font-size: 16px;
     background-color: #af7eeb;
-    padding-right: 40px;
+    border: none;
     color: #fff;
-}
-
-.input-search::placeholder {
-    color: rgba(255, 255, 255, .9);
-    font-size: 18px;
-    letter-spacing: 2px;
-    font-weight: 100;
-}
-
-.btn-search {
-    width: 50px;
-    height: 50px;
-    border-style: none;
-    font-size: 20px;
-    font-weight: bold;
-    outline: none;
     cursor: pointer;
-    border-radius: 50%;
+    padding: 15px 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     position: absolute;
-    right: 0px;
-    color: #ffffff;
-    background-color: transparent;
-    pointer-events: painted;
-}
-
-.btn-search:focus~.input-search {
-    width: 300px;
-    border-radius: 0px;
-    background-color: #af7eeb;
-    border-bottom: 1px solid rgba(255, 255, 255, .5);
-    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
-}
-
-.input-search:focus {
-    width: 300px;
-    border-radius: 0px;
-    background-color: #af7eeb;
-    border-bottom: 1px solid rgba(255, 255, 255, .5);
-    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
-}
+    top: 0;
+    right: 0;
+    transition: .9s ease;
+  }
+  
+  .search button[type="submit"]:hover {
+    transform: scale(1.1);
+    color: rgb(255, 255, 255);
+    background-color: #843dda;
+  }
+  
 
 @media(max-width:520px) {
     .container {
         padding: 0 25px;
     }
+    .container {
+        margin-top: 18vh !important;
+    }
 }
 
 @media(max-width:400px) {
+    .container {
+        padding: 0 20px;
+    }
+    .container {
+        margin-top: 17vh !important;
+    }
+    .abc{
+        font-family: "Roboto", sans-serif;font-weight: 500;font-style: normal;font-size: 23px;
+    }
+    .fa {
+        font-size: 22px;
+    }
+}
+@media(max-width:350px) {
+    .container {
+        margin-top: 15vh !important;
+    }
     .container {
         padding: 0 20px;
     }
