--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ body {
 
 .main {
     margin-top: 15px !important;
+    margin-bottom: 15px !important;
     background-color: white;
     /* padding: 0 20px 20px 20px; */
     border-radius: 5px;
